--- a/index.html
+++ b/index.html
@@ -9,11 +9,23 @@
   <body>
     <div id="wrapper">
       <nav class="navdiv">
+        <div class="dropdowndiv">
+          <button class="dropbtn">
+            ☰
+            <div class="dropdown">
+              <a href="index.html">Startsida</a>
+              <a href="#">Portfolio</a>
+              <a href="kontakt.html">Kontakt</a>
+              <a href="#">Bildgalleri</a>
+            </div>
+          </button>
+        </div>
+
         <ul class="uldiv">
-          <li>Startsida</li>
-          <li>Portfolio</li>
-          <li>Kontakt</li>
-          <li>Bildgalleri</li>
+          <a href="index.html"><li>Startsida</li></a>
+          <a href="#"><li>Portfolio</li></a>
+          <a href="kontakt.html"><li>Kontakt</li></a>
+          <a href="#"><li>Bildgalleri</li></a>
         </ul>
 
         <img src="bilder/clipart2803931.png" class="logo" />
