fixed iframe position and minor fixes

--- a/index.html
+++ b/index.html
@@ -70,26 +70,38 @@
             </strong>
           </h3>
         </div>
-        <div class="iframediv">
-          <iframe
-            class="iframe"
-            src="https://www.youtube.com/embed/QdFwjJo_KIM?si=W2fYsgmWKcYZ8c1z"
-          >
-          </iframe>
-          <iframe
-            class="iframe"
-            src="https://www.youtube.com/embed/QdFwjJo_KIM?si=W2fYsgmWKcYZ8c1z"
-          >
-          </iframe>
-          <iframe
-            class="iframe"
-            src="https://www.youtube.com/embed/QdFwjJo_KIM?si=W2fYsgmWKcYZ8c1z"
-          >
-          </iframe>
-
-          <audio controls>
-            <source src="horse.ogv" type="audio/mp3" />
-          </audio>
+        <div class="contentdiv">
+          <h3>
+            <strong
+              ><em class="videotext"> Videos på bilen samt ett hästljud</em>
+            </strong>
+          </h3>
+          <div class="iframediv">
+            <div class="videobox">
+              <p><strong>Förarperspektiv (POV)</strong></p>
+              <iframe
+                class="iframe"
+                src="https://www.youtube.com/embed/QdFwjJo_KIM?si=W2fYsgmWKcYZ8c1z"
+              >
+              </iframe>
+            </div>
+            <div class="videobox">
+              <p><strong>Prestanda och statistik!</strong></p>
+              <iframe
+                class="iframe"
+                src="https://www.youtube.com/embed/P-l02pP0U1Y?si=AeesM0USc_3qybOD"
+              >
+              </iframe>
+            </div>
+            <div class="videobox">
+              <p><strong>Drag race mot en Golf R!</strong></p>
+              <iframe
+                class="iframe"
+                src="https://www.youtube.com/embed/AmUwG9_UCms?si=ml5kVGus4jHyjrDw"
+              >
+              </iframe>
+            </div>
+          </div>
         </div>
       </div>
     </div>
