Added content and major fixes

--- a/index.html
+++ b/index.html
@@ -28,57 +28,82 @@
           <a href="#"><li>Bildgalleri</li></a>
         </ul>
 
-        <img src="bilder/clipart2803931.png" class="logo" />
+        <a href="index.html"
+          ><img src="bilder/clipart2803931.png" class="logo"
+        /></a>
       </nav>
+
       <div class="mainbloggdiv">
-        <div class="bloggdiv">
-          <h1>Min personliga blogg</h1>
+        <div class="secondbloggdiv">
+          <div class="bloggdiv">
+            <h1>Min personliga blogg</h1>
 
-          <p class="bloggtext">
-            Här så kommer jag skriva om massa saker som händer och hur det går
-            för mig under skolgånge. Jag började med att skapa en navigerings
-            fält som innehåller startsida, portfolio och ett kontaktformulär.
-          </p>
+            <p class="bloggtext">
+              Här så kommer jag skriva om massa saker som händer och hur det går
+              för mig under skolgånge. Jag började med att skapa en navigerings
+              fält som innehåller startsida, portfolio och ett kontaktformulär.
+            </p>
 
-          <p class="bloggtext">
-            Här är information om Type R: Type R har en spännande 2.0 VTEC
-            TURBO-motor, en ny dataloggningsfunktion, tre selektiva körlägen och
-            lättare bromsar. Allt detta, i kombination med ett uppgraderat och
-            avancerat hjulupphängningssystem, ger sensationella prestanda hela
-            vägen till mållinjen.
-          </p>
+            <p class="bloggtext">
+              Här är information om Type R: Type R har en spännande 2.0 VTEC
+              TURBO-motor, en ny dataloggningsfunktion, tre selektiva körlägen
+              och lättare bromsar. Allt detta, i kombination med ett uppgraderat
+              och avancerat hjulupphängningssystem, ger sensationella prestanda
+              hela vägen till mållinjen.
+            </p>
 
-          <p>
-            Klicka <a class="link">här</a> om du vill läsa mer om Honda Civic
-            Type-R
-          </p>
+            <p class="undertext">
+              Klicka <a class="link">här</a> om du vill läsa mer om Honda Civic
+              Type-R
+            </p>
 
-          <h3>
-            <strong>Här har vi två bilder på den vackra maskinen!</strong>
-          </h3>
+            <h3>
+              <strong>Här har vi två bilder på den vackra maskinen!</strong>
+            </h3>
 
-          <img src="bilder/typer-removebg-preview.png" class="typer" />
-          <img src="bilder/pngwing.com.png" class="typer" />
+            <img src="bilder/typer-removebg-preview.png" class="typer" />
+            <img src="bilder/pngwing.com.png" class="typer" />
 
-          <h3>
-            <strong
-              ><em class="videotext">
-                Videos på bilen samt ett hästljud<span class="arrow"
-                  >&rarr;</span
+            <em class="someem">the machine learns how to adapt to the road</em>
+          </div>
+          <div class="bloggdiv2">
+            <h3><strong>KÄLLOR & INFO</strong></h3>
+            <p class="infotext">
+              Här kan du läsa mer om bilen på Hondas officiella hemsida samt
+              diverse hemsidor!
+            </p>
+            <ul class="kallor">
+              <li>
+                <a
+                  class="link2"
+                  href="https://www.honda.se/cars/new/civic-type-r/performance.html"
+                  >honda.se</a
                 >
-              </em>
-            </strong>
-          </h3>
+              </li>
+              <li>
+                <a href="https://bilweb.se/sok/honda/type-r" class="link2"
+                  >bilweb.se</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.caranddriver.com/honda/civic-type-r"
+                  class="link2"
+                  >caranddriver.com</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="contentdiv">
           <h3>
             <strong
-              ><em class="videotext"> Videos på bilen samt ett hästljud</em>
+              ><h4 class="videotext">Videos på bilen samt ett hästljud</h4>
             </strong>
           </h3>
           <div class="iframediv">
             <div class="videobox">
-              <p><strong>Förarperspektiv (POV)</strong></p>
+              <p>Förarperspektiv (POV)</p>
               <iframe
                 class="iframe"
                 src="https://www.youtube.com/embed/QdFwjJo_KIM?si=W2fYsgmWKcYZ8c1z"
@@ -86,7 +111,7 @@
               </iframe>
             </div>
             <div class="videobox">
-              <p><strong>Prestanda och statistik!</strong></p>
+              <p>Prestanda och statistik!</p>
               <iframe
                 class="iframe"
                 src="https://www.youtube.com/embed/P-l02pP0U1Y?si=AeesM0USc_3qybOD"
@@ -94,7 +119,7 @@
               </iframe>
             </div>
             <div class="videobox">
-              <p><strong>Drag race mot en Golf R!</strong></p>
+              <p>Drag race mot en Golf R!</p>
               <iframe
                 class="iframe"
                 src="https://www.youtube.com/embed/AmUwG9_UCms?si=ml5kVGus4jHyjrDw"
@@ -104,6 +129,31 @@
           </div>
         </div>
       </div>
+      <footer class="footerdiv">
+        <div class="footerdivinfo">
+          <h3>Adress & Info</h3>
+          <p>Adress: Göteborg , sverige</p>
+          <p>Adress: Göteborg , sverige</p>
+          <p>Adress: Göteborg , sverige</p>
+          <p>Adress: Göteborg , sverige</p>
+        </div>
+        <div class="snabblink">
+          <h3>Snabblänkar</h3>
+          <ul class="footerul">
+            <a href="index.html"><li>Startsida</li></a>
+            <a href="#"><li>Portfolio</li></a>
+            <a href="kontakt.html"><li>Kontakt</li></a>
+            <a href="#"><li>Bildgalleri</li></a>
+          </ul>
+        </div>
+        <h3>Checka in våra sociala medier!</h3>
+        <div class="icondiv">
+          <img src="bilder/youtube.png" class="youtube" />
+          <img src="bilder/twitter.png" class="twitter" />
+          <img src="bilder/instagram.png" class="instagram" />
+        </div>
+      </footer>
     </div>
+    <script></script>
   </body>
 </html>
