--- a/kontakt.html
+++ b/kontakt.html
@@ -34,7 +34,9 @@
           <a href="#"><li>Bildgalleri</li></a>
         </ul>
 
-        <img src="bilder/clipart2803931.png" class="logo" />
+        <a href="index.html"
+          ><img src="bilder/clipart2803931.png" class="logo"
+        /></a>
       </nav>
       <div class="mainbloggdiv">
         <div class="bloggdiv">
