--- a/kontakt.html
+++ b/kontakt.html
@@ -39,7 +39,7 @@
         /></a>
       </nav>
       <div class="mainbloggdiv">
-        <div class="bloggdiv">
+        <div class="kontaktdiv">
           <div class="kontaktP">
             <h1 class="kontaktH">Kontaktformulär</h1>
             <p>Välkommen att kontakta oss via denna kontaktformuläret.</p>
