--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
             <img src="bilder/typer-removebg-preview.png" class="typer" />
             <img src="bilder/pngwing.com.png" class="typer" />
 
-            <em class="someem">the machine learns how to adapt to the road</em>
+            <p class="emtext">
+              <em class="someem"
+                >the machine learns how to adapt to the road</em
+              >
+            </p>
           </div>
           <div class="bloggdiv2">
             <h3><strong>KÄLLOR & INFO</strong></h3>
@@ -132,13 +136,20 @@
       <footer class="footerdiv">
         <div class="footerdivinfo">
           <h3>Adress & Info</h3>
-          <p>Adress: Göteborg , sverige</p>
-          <p>Adress: Göteborg , sverige</p>
-          <p>Adress: Göteborg , sverige</p>
-          <p>Adress: Göteborg , sverige</p>
+          <div class="line"></div>
+          <p class="info1">
+            <strong class="adre">Adress:</strong> Temperaturgatan 77, 41841
+          </p>
+          <p class="info1"><strong class="adre">Org nr:</strong> 1234 567 89</p>
+          <p class="info1">
+            <strong class="adre">Öppettider:</strong> mån-fre 08-16 Helger
+            stängd
+          </p>
+          <p class="info2">Hur hanterar vi personuppgifter?</p>
         </div>
         <div class="snabblink">
           <h3>Snabblänkar</h3>
+          <div class="line"></div>
           <ul class="footerul">
             <a href="index.html"><li>Startsida</li></a>
             <a href="#"><li>Portfolio</li></a>
@@ -146,14 +157,17 @@
             <a href="#"><li>Bildgalleri</li></a>
           </ul>
         </div>
-        <h3>Checka in våra sociala medier!</h3>
-        <div class="icondiv">
-          <img src="bilder/youtube.png" class="youtube" />
-          <img src="bilder/twitter.png" class="twitter" />
-          <img src="bilder/instagram.png" class="instagram" />
+        <div class="Mediaicon">
+          <h3>Checka in våra sociala medier!</h3>
+          <div class="line"></div>
+          <div class="icondiv">
+            <img src="bilder/youtube.png" class="twitter" />
+            <img src="bilder/twitter.png" class="twitter" />
+            <img src="bilder/instagram.png" class="twitter" />
+            <img src="bilder/facebook-round-color-icon.webp" class="twitter" />
+          </div>
         </div>
       </footer>
     </div>
-    <script></script>
   </body>
 </html>
