Content & appearance finished, Made adjustments.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="lek4.css" />
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" name="viewport" />
     <title>Document</title>
   </head>
 
@@ -29,7 +29,7 @@
         </ul>
 
         <a href="index.html"
-          ><img src="bilder/clipart2803931.png" class="logo"
+          ><img src="bilder/clipart2803931.png" class="logo" alt="R-logo"
         /></a>
       </nav>
 
@@ -53,21 +53,33 @@
             </p>
 
             <p class="undertext">
-              Klicka <a class="link">här</a> om du vill läsa mer om Honda Civic
-              Type-R
+              Klicka
+              <a
+                class="link"
+                href="https://www.honda.se/cars/new/civic-type-r/performance.html"
+                >här</a
+              >
+              om du vill läsa mer om Honda Civic Type-R
             </p>
 
             <h3>
               <strong>Här har vi två bilder på den vackra maskinen!</strong>
             </h3>
 
-            <img src="bilder/typer-removebg-preview.png" class="typer" />
-            <img src="bilder/pngwing.com.png" class="typer" />
+            <img
+              src="bilder/typer-removebg-preview.png"
+              class="typer"
+              alt="Bil"
+            />
+            <img src="bilder/pngwing.com.png" class="typer" alt="bil" />
 
             <p class="emtext">
-              <em class="someem"
-                >the machine learns how to adapt to the road</em
-              >
+              <em class="someem">Author: Hamoudi Lazkani</em>
+              <br />
+
+              <em class="someem">Last updated: 24 September 14:40 UTC</em>
+              <br />
+              <em class="someem">The machine adapts by learning the road</em>
             </p>
           </div>
           <div class="bloggdiv2">
