--- a/kontakt.html
+++ b/kontakt.html
@@ -8,7 +8,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="lek4.css" />
-    <meta charset="UTF-8" />
+
+    <meta charset="UTF-8" name="viewport" />
     <title>Document</title>
   </head>
 
@@ -71,9 +72,45 @@
                 placeholder="Skriv ditt meddelande..."
               />
             </div>
+            <input type="submit" class="skicka" />
           </form>
         </div>
       </div>
+      <footer class="footerdiv">
+        <div class="footerdivinfo">
+          <h3>Adress & Info</h3>
+          <div class="line"></div>
+          <p class="info1">
+            <strong class="adre">Adress:</strong> Temperaturgatan 77, 41841
+          </p>
+          <p class="info1"><strong class="adre">Org nr:</strong> 1234 567 89</p>
+          <p class="info1">
+            <strong class="adre">Öppettider:</strong> mån-fre 08-16 Helger
+            stängd
+          </p>
+          <p class="info2">Hur hanterar vi personuppgifter?</p>
+        </div>
+        <div class="snabblink">
+          <h3>Snabblänkar</h3>
+          <div class="line"></div>
+          <ul class="footerul">
+            <a href="index.html"><li>Startsida</li></a>
+            <a href="#"><li>Portfolio</li></a>
+            <a href="kontakt.html"><li>Kontakt</li></a>
+            <a href="#"><li>Bildgalleri</li></a>
+          </ul>
+        </div>
+        <div class="Mediaicon">
+          <h3>Checka in våra sociala medier!</h3>
+          <div class="line"></div>
+          <div class="icondiv">
+            <img src="bilder/youtube.png" class="twitter" />
+            <img src="bilder/twitter.png" class="twitter" />
+            <img src="bilder/instagram.png" class="twitter" />
+            <img src="bilder/facebook-round-color-icon.webp" class="twitter" />
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
