Compatipable with mobile devices

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="lek4.css" />
-    <meta charset="UTF-8" name="viewport" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Document</title>
   </head>
 
@@ -114,7 +115,7 @@
         <div class="contentdiv">
           <h3>
             <strong
-              ><h4 class="videotext">Videos på bilen samt ett hästljud</h4>
+              ><h4 class="videotext">Youtube videos på bilen</h4>
             </strong>
           </h3>
           <div class="iframediv">
